--- a/prototypes/art/colors_transition/p06/assets/scss/index.scss
+++ b/prototypes/art/colors_transition/p06/assets/scss/index.scss
@@ -95,7 +95,7 @@ body{
 	&.bgw→k, &.bgk→r, &.bgw→r, 
 	&.bgk→w, &.bgr→k, &.bgr→w{
 		h1{text-shadow: currentColor 0 0 60px;}
-		button{text-shadow: currentColor 0 0 15px; box-shadow: 0 0 15px currentColor}
+		//button{text-shadow: currentColor 0 0 15px; box-shadow: 0 0 15px currentColor}
 		border-bottom-color: currentColor;
 	}
 	main{
@@ -103,7 +103,7 @@ body{
 		width: 100%;
 		display: flex;
 		align-items: center;
-		justify-content: center;
+		justify-content: left;
 
 		box-sizing: border-box;
 		margin: $baseline*3 $unite;
@@ -121,20 +121,23 @@ body{
 		ul{
 			width: 500px;
 			width: clamp(500px, 50%, 800px);
+			margin: $unite*2;
 			display: flex;
-			justify-content: space-around;
+			flex-direction: column;
+			z-index: 2;
 
 			button{
 				background: none;
 				font-family: sans-serif;
 				font-weight: 200;
-				font-size: 1rem;
+				font-size: 3rem;
 				color: currentColor;			
 
 				cursor: pointer;
 
 				padding: 5px 10px;
-				border: 1px solid currentColor;
+
+				//border: 1px solid currentColor;
 
 			}
 		}
@@ -146,7 +149,16 @@ body{
 			height: 100vh;
 			width: 100vw;
 			object-fit: cover;
-			mix-blend-mode: overlay;
+			mix-blend-mode: lighten;
+		}
+
+		video:nth-of-type(2){
+			display: none;
+		}
+
+		ul:hover {
+			& + video{display: none;}
+			& + video + video{display: inline-block;}
 		}
 	}
 }
