--- a/prototypes/art/ui/p09/assets/scss/component/_colors.scss
+++ b/prototypes/art/ui/p09/assets/scss/component/_colors.scss
@@ -13,6 +13,11 @@
 	--rot: -45deg;
 }
 
+::-moz-selection, ::selection {
+	color: var(--bg);
+  background-color: var(--cc);
+}
+
 body{
 
 	&.bgr{ --bg: var(--c0); --cc: var(--c1) ; background: var(--bg); color: var(--cc); }
