--- a/prototypes/ui/assets/css-compiled/main.css
+++ b/prototypes/ui/assets/css-compiled/main.css
@@ -847,17 +847,18 @@ input.on-off:checked::before {
             */
 nav#sideNav {
   position: fixed;
-  transition: all 0s, transform 0.25s ease-in-out;
+  transition: all 0.5s ease-in-out, width 0s, margin 0s, padding 0s, left 0s;
   box-sizing: border-box;
   overflow: visible scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
   z-index: 5;
   /*
-      row
+      ☰ 
+      ↓
           */
   /*
-      Inline
+      ||| →
               */
 }
 nav#sideNav::-webkit-scrollbar {
@@ -869,19 +870,30 @@ nav#sideNav::-webkit-scrollbar {
     left: 0;
   }
 }
-nav#sideNav li.cat h1 {
+nav#sideNav * {
+  border: 1px solid;
+}
+nav#sideNav li.cat ul.item-container {
+  display: -webkit-box;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;
+  /* TWEENER - IE 10 */
+  display: -webkit-flex;
+  /* NEW - Chrome */
+  display: flex;
+  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+}
+nav#sideNav li.cat ul.item-container h1 {
   font-family: "GeneralSans", sans-serif;
   font-size: 0.75rem;
   line-height: 0.9375rem;
   font-weight: 300;
   letter-spacing: 0px;
 }
-nav#sideNav li.cat li.item img.cover {
-  object-fit: contain;
-  transition: all 0s, transform 0.25s ease;
-}
-nav#sideNav li.cat li.item img.cover:hover {
-  transform: scale(2);
+nav#sideNav li.cat ul.item-container li.item img.cover {
+  transition: all 0.25s ease-in-out;
 }
 nav#sideNav:not(.inline) {
   position: fixed;
@@ -935,8 +947,22 @@ nav#sideNav:not(.inline) ul.cat-container li.cat {
   margin: 0 0 2.5rem 0;
   overflow: hidden;
 }
+nav#sideNav:not(.inline) ul.cat-container li.cat ul.item-container {
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -moz-box-align: start;
+  -ms-flex-align: start;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  gap: 0;
+}
 nav#sideNav:not(.inline) ul.cat-container li.cat ul.item-container li.item {
-  margin: 0.625rem 0;
+  margin: 0.2083333333rem 0;
   scroll-snap-align: start;
   transition: all 0.25s ease, max-height 0.5s ease-in-out, margin 0s;
   max-height: 150px;
@@ -945,7 +971,9 @@ nav#sideNav:not(.inline) ul.cat-container li.cat ul.item-container li.item {
 nav#sideNav:not(.inline) ul.cat-container li.cat ul.item-container li.item img.cover {
   height: 75px;
   max-height: 150px;
-  transform-origin: left;
+}
+nav#sideNav:not(.inline) ul.cat-container li.cat ul.item-container li.item img.cover:hover {
+  height: 150px;
 }
 nav#sideNav.inline {
   position: absolute;
@@ -953,8 +981,6 @@ nav#sideNav.inline {
 }
 @media (min-width: 700px) {
   nav#sideNav.inline {
-    height: 33vh;
-    max-height: 300px;
     left: 100px;
   }
 }
@@ -979,6 +1005,7 @@ nav#sideNav.inline > ul.cat-container.active li.item a {
 nav#sideNav.inline > ul.cat-container li.cat {
   display: inline-block;
   padding-right: 100px;
+  vertical-align: top;
   /*input[name="toggle-c"]:checked ~*/
 }
 nav#sideNav.inline > ul.cat-container li.cat label {
@@ -986,6 +1013,19 @@ nav#sideNav.inline > ul.cat-container li.cat label {
   top: 0;
   left: 0;
   margin: 2.5rem 0;
+}
+nav#sideNav.inline > ul.cat-container li.cat ul.item-container {
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
 nav#sideNav.inline > ul.cat-container li.cat ul.item-container li.item {
   display: inline-block;
@@ -997,11 +1037,7 @@ nav#sideNav.inline > ul.cat-container li.cat ul.item-container li.item a {
 }
 nav#sideNav.inline > ul.cat-container li.cat ul.item-container li.item img.cover {
   width: 20vw;
-  max-height: inherit;
-  transform-origin: center;
-}
-nav#sideNav.inline > ul.cat-container li.cat ul.item-container li.item img.cover:hover {
-  transform: inherit;
+  max-width: 250px;
 }
 nav#sideNav nav#sideNav:not(.inline) input[name=toggle-c]:not(:checked) ~ ul li.item {
   max-height: 0;
@@ -1121,12 +1157,11 @@ body#categorie main .content {
   margin: calc(clamp(7.5rem, 25vh, 300px)) 0 calc(clamp(7.5rem, 25vh, 300px)) 0;
 }
 body#categorie main #pièces {
-  height: 33vh;
-  max-height: 300px;
+  height: 25rem;
   margin: 20vh 0 20vh;
 }
 body#categorie #sideNav.inline {
-  bottom: 250px;
+  bottom: 12.5rem;
   /*Fallback */
   margin: 7.5rem 0 15rem 0;
   margin: 0 0 calc(clamp(7.5rem, 20vh, 600px)) 0;
